--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "ready-instructor",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "4.18.1",
-    "mongodb": "4.7.0",
-    "mongoose": "6.4.4"
-  }
+    "name": "ready-instructor",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "4.18.1",
+        "mongodb": "4.7.0",
+        "mongoose": "6.4.4"
+    }
 }
