--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "express-validator": "6.14.2",
         "mongodb": "4.7.0",
         "mongoose": "6.4.4",
-        "morgan": "1.10.0"
+        "morgan": "1.10.0",
+        "validator": "13.7.0"
     }
 }
